--- a/src/main/resources/static/css/user.css
+++ b/src/main/resources/static/css/user.css
@@ -196,3 +196,72 @@ button:hover {
     background-color: #ff1c1f;
     transform: scale(1.05);
 }
+
+/* 模态窗口的基础样式 */
+.modal {
+    display: none; /* 默认隐藏 */
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* 背景半透明黑色 */
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.5s ease; /* 透明度渐变效果 */
+}
+
+.modal-content {
+    background-color: #2c3e50;
+    padding: 20px;
+    border-radius: 10px;
+    width: 60%;
+    max-width: 800px;
+    margin: auto;
+    color: #fff;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    transform: scale(0.7); /* 初始缩小 */
+    transition: transform 0.3s ease, opacity 0.5s ease; /* 缩放和透明度过渡效果 */
+    opacity: 0;
+}
+
+/* 当模态窗口打开时，应用显示样式 */
+.modal.show {
+    opacity: 1; /* 透明度渐变至完全可见 */
+}
+
+.modal.show .modal-content {
+    transform: scale(1); /* 缩放回正常大小 */
+    opacity: 1; /* 内容完全可见 */
+}
+
+/* 当模态窗口关闭时，透明度和缩放动画会渐出 */
+.modal.hide .modal-content {
+    transform: scale(0.7); /* 缩小动画 */
+    opacity: 0; /* 渐出效果 */
+}
+
+.modal.hide {
+    opacity: 0;
+}
+
+/* 关闭按钮 */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close:hover, .close:focus {
+    color: #f39c12;
+    text-decoration: none;
+}
+
+
+.modal.hide {
+    opacity: 0;
+}
