--- a/src/main/resources/static/css/songs_repo.css
+++ b/src/main/resources/static/css/songs_repo.css
@@ -19,6 +19,45 @@ body {
 body.fade-in {
     opacity: 1;
 }
+/* 返回按钮样式 */
+/* From Uiverse.io by Jedi-hongbin */ 
+#back-btn {
+    display: flex;
+    height: 3em;
+    width: 100px;
+    align-items: center;
+    justify-content: center;
+    background-color: #eeeeee4b;
+    border-radius: 3px;
+    letter-spacing: 1px;
+    transition: all 0.2s linear;
+    cursor: pointer;
+    border: none;
+    background: #ff6b81;
+    color: #f0f0f0;
+    position: absolute;
+    top: 10em;
+    left: 10em;
+   }
+   
+   #back-btn > svg {
+    margin-right: 5px;
+    margin-left: 5px;
+    font-size: 20px;
+    font-weight: 200;
+    transition: all 0.4s ease-in;
+    color: #f0f0f0;
+   }
+   
+   #back-btn:hover > svg {
+    font-size: 1.2em;
+    transform: translateX(-5px);
+   }
+   
+   #back-btn:hover {
+    box-shadow: 9px 9px 33px #d1d1d1, -9px -9px 33px #ffffff;
+    transform: translateY(-2px);
+   }
 
 h2 {
     font-size: 36px;
@@ -198,11 +237,15 @@ tbody tr:hover {
   }
   
   .container {
-    display: block;
+    display: inline-flex; /* 使用 flexbox 布局 */
+    align-items: center;  /* 垂直居中 */
+    gap: 5px; /* 添加图标和数字之间的间距 */
     position: relative;
     cursor: pointer;
     user-select: none;
+    
   }
+
   
   .container svg {
     position: relative;
@@ -221,3 +264,15 @@ tbody tr:hover {
   .container input:checked ~ svg {
     fill: #ffeb49;
   }
+
+  /* Star 数量展示的样式 */
+/* 样式调整 */
+.star-count-label {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;  /* 或者设置具体的高度 */
+    padding-left: 8px;  /* 添加一点左侧间距，使其与星星图标分开 */
+    font-size: 16px;  /* 你可以调整数字的大小 */
+    color: #fff;      /* 设定 count 数字的颜色 */
+}
